# cw-ip-211_sorting

./: .gitignore  CMakeLists.txt  makefile  makefile.txt
.github/workflows/: build.yml
Docs/: OtchetKrayushkin.docx  Отчет Панчина.docx  Отчет Панчина.docx:Zone.Identifier  ТЗ.docx
include/: sorts.h
src/: main.cpp  sorts.cpp  source.cpp
src/lib/: sorts.h
test/: ctest.cpp  main.cpp
